# swift-composable-architecture

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  swift_deps_index.json
.bis/: BUILD
Examples/SpeechRecognition/SpeechRecognition/: BUILD  Info.plist
Sources/: BUILD
