module(
    name = "swift-composable-architecture",
    version = "0.0.0",
)

bazel_dep(name = "rules_apple", version = "3.2.1")
bazel_dep(name = "rules_swift", version = "1.15.1")
bazel_dep(name = "rules_swift_package_manager", version = "0.25.0")
bazel_dep(name = "apple_support", version = "1.11.1")
bazel_dep(name = "gazelle", version = "0.35.0", repo_name = "bazel_gazelle")
