module(
    name = "swift-composable-architecture",
    version = "0.0.0",
)

bazel_dep(name = "rules_apple", version = "3.4.0")
bazel_dep(name = "rules_swift", version = "1.17.0")
bazel_dep(name = "rules_swift_package_manager", version = "0.29.1")
bazel_dep(name = "rules_xcodeproj", version = "2.0.0")
bazel_dep(name = "apple_support", version = "1.15.1")
bazel_dep(name = "gazelle", version = "0.36.0", repo_name = "bazel_gazelle")

bazel_dep(name = "bis", version = "0.4.1", dev_dependency = True)
archive_override(
    module_name = "bis",
    urls = "https://github.com/ixerol/bis/archive/refs/tags/0.4.1.tar.gz",
    strip_prefix = "bis-0.4.1"
)

# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_file(
    deps_index = "//:swift_deps_index.json",
)
use_repo(
    swift_deps,
    "swiftpkg_combine_schedulers",
    "swiftpkg_swift_benchmark",
    "swiftpkg_swift_case_paths",
    "swiftpkg_swift_collections",
    "swiftpkg_swift_concurrency_extras",
    "swiftpkg_swift_custom_dump",
    "swiftpkg_swift_dependencies",
    "swiftpkg_swift_docc_plugin",
    "swiftpkg_swift_identified_collections",
    "swiftpkg_swift_macro_testing",
    "swiftpkg_swift_syntax",
    "swiftpkg_swiftui_navigation",
    "swiftpkg_xctest_dynamic_overlay",
)
# swift_deps END
